k3s/flux-notifications/01_email_notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-email-notifier
  namespace: flux-system
  labels:
    app: flux-email-notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux-email-notifier
  template:
    metadata:
      labels:
        app: flux-email-notifier
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - image: ghcr.io/rparmer/flux-email-notifier:latest
        imagePullPolicy: Always
        name: flux-email-notifier
        ports:
        - containerPort: 3000
          name: api
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: flux-email-notifier-svc
  namespace: flux-system
  labels:
    app: flux-email-notifier
spec:
  selector:
    app: flux-email-notifier
  type: ClusterIP
  ports:
  - name: api
    port: 3000
    targetPort: api
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flux-email-notifier
  namespace: flux-system
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: flux-email-notifier
  policyTypes:
  - Ingress
